--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 				<h1> K-Map Generator with Multiple Outputs </h1>
 				<div class="all-inputs">
 					<p id="input-output-fields" class="standard-border"> 
-					numInputs:  <input type="number" name="numinputs" id="nInputs"
+					numInputs:  <input type="number" name="numinputs" id="nBits"
 						       value=2 min=2 max=6
-						       onfocusout="ensureValidBounds('nInputs', 2, 6)">
+						       onfocusout="ensureValidBounds('nBits', 2, 6)">
 					<br>
 					<br>
 					numOutputs:  <input type="number" name="numoutputs" id="nOutputs"
@@ -31,74 +31,42 @@
 				<table id="truth-table" class="standard-border">
 					<tr id="row-head"> 
 						<th>   </th>
-						<th> A </th>
-						<th> B </th>
-						<th> y </th>
+						<th id='input-bit-2'> A </th>
+						<th id='input-bit-1'> B </th>
+						<th id='output-set-1'> y </th>
 					</tr>
+											<!--	
 					<tr id="row1">
 						<th> 1 </th>
 						<td> 0 </td>
 						<td> 0 </td>
-						<td> <input type="text" id="y11" 
+						<td> 
+<input type="text" id="y11" 
 						 	maxLength=1 value=0 class="output-value"
 							onfocusout="ensureValidOutput('y11')">
 						</td>
 					</tr>
-					<tr id="row2">
-						<th> 2 </th>
-						<td> 0 </td>
-						<td> 1 </td>
-						<td> <input type="text" id="y12" 
-						 	maxLength=1 value=0 class="output-value"
-							onfocusout="ensureValidOutput('y12')">
-						</td>
-					</tr>
-					<tr id="row3">
-						<th> 3 </th>
-						<td> 1 </td>
-						<td> 0 </td>
-						<td> <input type="text" id="y13" 
-						 	maxLength=1 value=0 class="output-value"
-							onfocusout="ensureValidOutput('y13')">
-						</td>
-					</tr>
-					<tr id="row4">
-						<th> 4 </th>
-						<td> 1 </td>
-						<td> 1 </td>
-						<td> <input type="text" id="y14" 
-						 	maxLength=1 value=0 class="output-value"
-							onfocusout="ensureValidOutput('y14')">
-						</td>
-					</tr>
+						-->
 				</table>
-
 			</div>
 		</div>
 		<script>
-			document.getElementById("nInputs").addEventListener("focusout", inputFieldFocusOut);
+			let tableRef = document.getElementById("truth-table");
+			let numInputs = parseInt(document.getElementById("nBits").value);
+			let numOutputs = parseInt(document.getElementById("nOutputs").value);
+			
+			initTruthTable(tableRef, numInputs, numOutputs);
+			
+function initTruthTable(tableRef, numInputs, desiredNumOutputs) {
+	let currNumRows = 1;
+	let numRowsNeeded = Math.pow(2, numInputs) + 1;
+	addRows(tableRef, currNumRows, numRowsNeeded);
+	addBitCols(tableRef, numInputs, desiredNumOutputs);
+}
+
+			document.getElementById("nBits").addEventListener("focusout", inputFieldFocusOut);
 			document.getElementById("nOutputs").addEventListener("focusout", outputFieldFocusOut);
-			function inputFieldFocusOut() {
-				let tableId = "truth-table";
-
-				let tableRef = document.getElementById(tableId);
-				let numInputsRequested = parseInt(document.getElementById("nInputs").value);
-				let desiredNumRows = Math.pow(2, numInputsRequested) + 1; // header counts as a row as well
-				let currNumRows = parseInt(tableRef.rows.length);
-				
-				let currNumCols = tableRef.rows[0].cells.length;
-				let desiredNumCols = numInputsRequested + 2;
-				//alert("curr=" + currNumCols + " des=" + desiredNumCols);
-				if (currNumRows > desiredNumRows) {
-					removeRows(tableRef, currNumRows, desiredNumRows);
-					removeCols(tableRef, currNumCols, desiredNumCols, 1);
-
-				} else {
-					addRows(tableRef, currNumRows, desiredNumRows);
-					addCols(tableRef, currNumCols, desiredNumCols, 1);
-				}
-
-			}
+			
 		</script>
 	</body>
 </html>
