Header Cols Adding Working
-- dataset Attribute not working for each output Header

--- a/index.html
+++ b/index.html
@@ -59,20 +59,57 @@
 			let tableRef = document.getElementById("truth-table");
 			let desiredNumBits = parseInt(document.getElementById("nBits").value);
 			let desiredNumOutputs = parseInt(document.getElementById("nOutputs").value);
+
 			initTruthTable(tableRef, desiredNumBits, desiredNumOutputs);
+			
+			document.getElementById("nBits").addEventListener("focusout", textFieldFocusOut);
+			document.getElementById("nOutputs").addEventListener("focusout", textFieldFocusOut);
+
+
+
+
+
 
 function initTruthTable(tableRef, desiredNumBits, desiredNumOutputs) {
 	let numRowsNeeded = Math.pow(2, desiredNumBits) + 1; // + 1 being for the header
-	let i = parseInt(tableRef.dataset.rows);
+
 	tableRef.dataset.rows = addRows(tableRef, parseInt(tableRef.dataset.rows), numRowsNeeded);
 	addIndexCols(tableRef, parseInt(tableRef.dataset.rows));
+	addHeaderCols(tableRef, desiredNumBits, desiredNumOutputs);
 	//addBitCols(tableRef, currNumBits, desiredNumBits);
 	//addOutputCols(tableRef, numBits, numOutputs);
 }
 
-			document.getElementById("nBits").addEventListener("focusout", bitTextFieldFocusOut);
-debugger;
-			//document.getElementById("nOutputs").addEventListener("focusout", outputFieldTextFocusOut);
+function addHeaderCols(tableRef, numBits, numOutputs) {
+	let currNumHeaderCols = tableRef.rows[0].cells.length;
+	let desiredNumHeaderCols = numBits + numOutputs + 1; // 1 being the first empty cell
+
+	for (i = 1; i <= numBits; i++) { //ignore cell 0
+		if (i >= currNumHeaderCols) { // Col does not currently exist
+			let newCell = tableRef.rows[0].insertCell(i);
+			newCell.outerHTML = "<th>" + getCorrespondingLetter(i) + "</th>";
+		} else { // Col exists
+			tableRef.rows[0].cells[i].outerHTML = "<th>" + getCorrespondingLetter(i) + "</th>"
+		}
+	}
+// TODO dataset Attribute not working propertly??
+	for (i = numBits+1; i < numOutputs+numBits+1; i++) {
+		let subscriptText = "<span style=\"border: none; font-size: 50%; vertical-align: text-bottom\">" +  (i - numBits) + "</span>";
+		//let subscriptText = "<span style=\"border: none\">" +  (i - numBits) + "</span>";
+		let outputOuterHTMLText = "<th style=\" letter-spacing: -5px\">y" + subscriptText  + "</th>";
+		if (i >= currNumHeaderCols) { //Col does not currently exist
+			let newCell = tableRef.rows[0].insertCell(-1);
+			newCell.outerHTML = outputOuterHTMLText;
+			newCell.setAttribute("data-outputNum", i - numBits);
+			console.log("first");
+		} else {
+			tableRef.rows[0].cells[i].outerHTML = outputOuterHTMLText;
+			tableRef.rows[0].cells[i].setAttribute("data-outputNum", i - numBits);
+			console.log("second");
+		}
+			console.log(tableRef.rows[0].cells[i].dataset.outputNum);
+	}
+}
 		</script>
 	</body>
 </html>
