Fixed Tab Order

--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
 				</div>
 			</div>
 		</div>
+
+		<div class="footer">
+			<p class="footer-text">
+				Made by Aashir Farooqi 
+				<br>
+				<a href="https://github.com/AashPointO/KmapWebsite" >source code</a>
+			</p>
+			<p>
+
+		</div>
+
 		<script>
 			let desiredNumBits = parseInt(document.getElementById("nBits").value);
 			let desiredNumOutputs = parseInt(document.getElementById("nOutputs").value);
