--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 		<link rel="stylesheet" href="style.css">
 		<script src="script.js">
 		</script>
+
+		<!-- SEO -->
+		<title> K-Map Generator SOP POS Implicants </title>
+		<meta name="keywords" content="KMap, Karnaugh, Map, K-Map, SOP, POS, Generator">
+		<meta name="description" content="Karnaugh Map generator, with SOP & POS forms, alongside multiple outputs.">
+		<meta name="author" content="Aashir Farooqi">
 	</head>
 	<body>
 		<div class="body">
