Added Desciription to help SEO (hopefully)

--- a/index.html
+++ b/index.html
@@ -21,7 +21,18 @@
 	</head>
 	<body>
 		<div class="body">
-			<h1> K-Map Generator with Multiple Outputs </h1>
+			<h1> Karnaugh Map Solver with Multiple Outputs </h1>
+			<p class="description"> 
+			Online Karnaugh map generator, which can take up to 4 bits of variables, and solve up to 8 distinct sets of outputs at a time.
+			For each output, a color-coded corresponding K-Map is generated, alongside the corresponding Sum of Prodcuts and Product of Sums equations. <br>
+			</p>
+			<p class="description">
+			Enter "1" for true, "0" for false, or "x" for dont-care.
+			</p>
+
+
+			<br>
+
 			<div class="inputs-container">
 				<table id="truth-table" class="standard-border">
 					<!-- Table is modified entirely onto the truth-table -->
